trancisiones en botones

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
               <img width="300" height="250" src="https://imagenes.elpais.com/resizer/d0gl_R1OcxlgiGp_nPMwA-u0gg8=/1200x0/arc-anglerfish-eu-central-1-prod-prisa.s3.amazonaws.com/public/AAKXLZYQAOOBQXPHIAQ3MYGZ5E.jpg" alt="foto de sinfeld 8"> <br>
                     
                 </section>
+                <section id="subir">
                 <a href="#up"> Subir </a>
+                </section>
         </main>
         <footer>
             <p>Todos los derechos reservados 2022</p>
