logo como boton de inicio

--- a/galeria.html
+++ b/galeria.html
@@ -12,10 +12,11 @@
 <body>
     <div id="contenedor">
         <header>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Seinfeld_logo.svg/1280px-Seinfeld_logo.svg.png" alt="logo" width="60">
+            <a class="logo" href="index.html">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Seinfeld_logo.svg/1280px-Seinfeld_logo.svg.png" alt="logo" width="60" alt="Seinfeld_logo">
+            </a>
             <nav>
                 <ul>
-                    <li><a href="index.html">inicio</a></li>
                     <li><a href="sinopsis.html">Sinopsis</a></li>
                     <li><a href="actores.html">Actores</a></li>
                     <li><a href="personajes.html">Personajes</a></li>
