--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <ul>
                 <li><a href="">ig</a></li>
                 <li><a href="">fb</a></li>
+                <li><a href="">tw</a></li>
             </ul>
         </footer>
         </div>
